--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "react-navigation": "^5.0.0"
